# deep-architect

./: .deep-architect.toml.template  .deep-researcher.toml.template  .gitignore  .quality-checks.toml  .quality-checks.toml.template  AGENTS.md  CLAUDE.md  README.md  config.toml.template  justfile  pyproject.toml
.claude/: statusline.sh
.claude/agents/: knowledge-analyzer.md  knowledge-locator.md  sherlock-holmes.md
.claude/commands/: architecture_critique.md  architecture_investigator.md  create_handoff.md  create_plan_generic.md  implement_plan.md  prepare_ticket.md  research_codebase_generic.md  resume_handoff.md
deep_architect/: __init__.py  __main__.py  cli.py  config.py  exit_criteria.py  git_ops.py  harness.py  llm_judge.py  quality_checks.py  review_action.py  review_action_harness.py  review_analyzer.py  sprints.py
deep_architect/agents/: circuit_breaker.py  client.py  critic.py  generator.py
deep_researcher/: __main__.py  cli.py  config.py  exit_criteria.py  git_ops.py  harness.py  logger.py  sprints.py
docs/: adverserial-plan.md  prd.md  prd.md~
scripts/: test_output_format.py
tests/: conftest.py  test_circuit_breaker.py  test_circuit_breaker_wiring.py  test_cli_yolo.py  test_client.py  test_client_timeout.py  test_coding_agents.py  test_config.py  test_critic_options.py  test_exit_criteria.py  test_files.py  test_git_ops.py  test_harness_retry.py  test_llm_judge.py  test_models.py  test_prompts.py  test_quality_checks.py  test_review_action_harness.py  test_review_analyzer.py  test_sprint_documentation.py  test_supplementary_context.py
(+137 files in other folders)
